commt for the DBStrorage custom schema

--- a/PropertyPulse_Django/Users/templates/Users/register.html
+++ b/PropertyPulse_Django/Users/templates/Users/register.html
@@ -56,7 +56,8 @@
 <body>
     <div class="container">
         <h2>Registration Form</h2>
-        <form action="/register" method="post">
+        <form action="/register/" method="post">
+            {% csrf_token %}
             <div class="form-group">
                 <label for="firstname">First Name:</label>
                 <input type="text" id="firstname" name="firstname" required>
