--- a/PropertyPulse_Django/templates/login.html
+++ b/PropertyPulse_Django/templates/login.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>Login</h1>
-    <form method="post">
+    <form action="/login/" method="post">
+        {% csrf_token %}
         <input type="text" name="username" placeholder="Username" required><br>
         <input type="password" name="password" placeholder="Password" required><br>
         <button type="submit">Login</button>
