commt for property creation init

--- a/PropertyPulse_flask/templates/create_property.html
+++ b/PropertyPulse_flask/templates/create_property.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>Property Form</h2>
-    <form action="/submit_property" method="post">
+    <form method="post">
         <label for="name">Name:</label><br>
         <input type="text" id="name" name="name"><br><br>
 
@@ -41,7 +41,7 @@
         <label for="contact_email">Contact Email:</label><br>
         <input type="email" id="contact_email" name="contact_email"><br><br>
 
-        <input type="submit" value="Submit">
+        <button type="submit">Submit</button>
     </form>
 </body>
 </html>
