--- a/PropertyPulse_flask/templates/profile.html
+++ b/PropertyPulse_flask/templates/profile.html
@@ -71,8 +71,8 @@
     <section class="container">
         <div class="profile-info">
             <h2>User Information</h2>
-            <p><strong>Name:</strong> Kyo Benimaru</p>
-            <p><strong>Email:</strong> KBenimaru@company.com</p>
+            <p><strong>Name:</strong> {{ username }}</p>
+            <p><strong>Email:</strong> {{ email }}</p>
             <p><strong>Phone:</strong> 7464 8484 43</p>
             <h3>Address</h3>
             <ul>
