--- a/PropertyPulse_flask/templates/index.html
+++ b/PropertyPulse_flask/templates/index.html
@@ -6,7 +6,11 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>Welcome to Flask User Management</h1>
-    <p><a href="/register">Register</a> | <a href="/login">Login</a></p>
+    <form>
+        <h1>Welcome to Flask User Management</h1>
+        <p><a href="/register">Register</a> | <a href="/login">Login</a></p>
+    </form>
+
+
 </body>
 </html>
